fixed safari flip-animations visibility bug

--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -152,6 +152,7 @@ $aos-distance: 100px !default;
  */
 
 [data-aos^='flip'][data-aos^='flip'] {
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   transition-property: transform;
 }
